--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "firebase": "^9.8.1",
+    "firebase-cli": "^1.2.0",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
